[package]
name = "lidar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
futures = "0.3.21"
reqwest = "0.11.9"
tokio = { version = "1.16.1", features = ["full"] }
